--- a/Explore/app/src/main/res/values/strings.xml
+++ b/Explore/app/src/main/res/values/strings.xml
@@ -6,7 +6,9 @@
 
     <string name="action_settings">Settings</string>
 
-    <string name="age_">Age -   </string>
+    <string name="date">Building date -   </string>
+    <string name="country">Country - </string>
+    <string name="city">City - </string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
