--- a/Explore/app/src/main/res/values/strings.xml
+++ b/Explore/app/src/main/res/values/strings.xml
@@ -9,7 +9,13 @@
     <string name="date">Building date -   </string>
     <string name="country">Country - </string>
     <string name="city">City - </string>
+    <string-array name="city_array">
+        <item>Erevan</item>
+        <item>Vanadzor</item>
+        <item>Gyumri</item>
+        <item>Stepanakert</item>
+        <item>Spitak</item>
+    </string-array>
 
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
